// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry/models/deploy-model/customize - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Interactive guided deployment flow for Azure OpenAI models with full customization control. Step-by-step selection of model version, SKU (GlobalStandard/Standard/ProvisionedManaged), capacity, RAI policy (content filter), and advanced options (dynamic quota, priority processing, spillover). USE FOR: custom deployment, customize model deployment, choose version, select SKU, set capacity, configure content filter, RAI policy, deployment options, detailed deployment, advanced deployment, PTU deployment, provisioned throughput. DO NOT USE FOR: quick deployment to optimal region (use preset).
",
  "extractedKeywords": [
    "advanced",
    "authentication",
    "azure",
    "capacity",
    "choose",
    "cli",
    "configure",
    "content",
    "control",
    "custom",
    "customization",
    "customize",
    "deploy",
    "deployment",
    "detailed",
    "dynamic",
    "filter",
    "flow",
    "full",
    "globalstandard",
    "guided",
    "interactive",
    "mcp",
    "model",
    "models",
    "monitor",
    "openai",
    "optimal",
    "options",
    "policy",
    "preset",
    "priority",
    "processing",
    "provisioned",
    "provisionedmanaged",
    "quick",
    "quota",
    "rbac",
    "region",
    "security",
    "select",
    "selection",
    "spillover",
    "standard",
    "step-by-step",
    "throughput",
    "validation",
    "version",
    "with",
  ],
  "name": "customize",
}
`;

exports[`microsoft-foundry/models/deploy-model/customize - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "advanced",
  "authentication",
  "azure",
  "capacity",
  "choose",
  "cli",
  "configure",
  "content",
  "control",
  "custom",
  "customization",
  "customize",
  "deploy",
  "deployment",
  "detailed",
  "dynamic",
  "filter",
  "flow",
  "full",
  "globalstandard",
  "guided",
  "interactive",
  "mcp",
  "model",
  "models",
  "monitor",
  "openai",
  "optimal",
  "options",
  "policy",
  "preset",
  "priority",
  "processing",
  "provisioned",
  "provisionedmanaged",
  "quick",
  "quota",
  "rbac",
  "region",
  "security",
  "select",
  "selection",
  "spillover",
  "standard",
  "step-by-step",
  "throughput",
  "validation",
  "version",
  "with",
]
`;
